--- a/app/src/main/res/layout/activity_account_opening.xml
+++ b/app/src/main/res/layout/activity_account_opening.xml
@@ -31,7 +31,8 @@
         app:layout_constraintTop_toBottomOf="@id/appbar_account_opening"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="?actionBarSize">
 
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
