--- a/app/src/main/res/layout/fragment_wallet_loan_details.xml
+++ b/app/src/main/res/layout/fragment_wallet_loan_details.xml
@@ -83,7 +83,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/background_round_white"
             android:orientation="vertical"
             android:padding="15dp"
             android:layout_marginTop="10dp">
@@ -124,7 +123,14 @@
                     android:textStyle="bold"/>
             </LinearLayout>
 
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
+                android:background="#31244A"
+                android:alpha=".1"
+                android:visibility="visible"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
