--- a/app/src/main/res/layout/fragment_wallet_loan_kyc_details.xml
+++ b/app/src/main/res/layout/fragment_wallet_loan_kyc_details.xml
@@ -75,8 +75,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:padding="10dp"
-                    android:orientation="vertical"
-                    android:background="@drawable/background_round_white">
+                    android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
