--- a/app/src/main/res/layout/activity_card_detail.xml
+++ b/app/src/main/res/layout/activity_card_detail.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/windowBackground"
-    tools:context=".activities.CardDetail">
+    tools:context=".fragments.CardDetail">
     <TextView
         android:id="@+id/heading"
         android:layout_width="wrap_content"
