--- a/app/src/main/res/layout/fragment_wallet_loan_details.xml
+++ b/app/src/main/res/layout/fragment_wallet_loan_details.xml
@@ -64,8 +64,29 @@
             app:spb_stateForegroundColor="@color/colorPrimary"
             app:spb_stateNumberBackgroundColor="#808080"
             app:spb_stateNumberForegroundColor="#eeeeee"
-            app:spb_stateLineThickness="4dp"/>
-
+            app:spb_stateLineThickness="4dp"
+            android:visibility="visible"/>
+        <com.kofigyan.stateprogressbar.StateProgressBar
+            android:id="@+id/loan_application_state_progress_bar_loan_details"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_20dp"
+            android:layout_gravity="center_horizontal"
+            android:textAlignment="center"
+            app:layout_constraintTop_toTopOf="parent"
+            app:spb_animateToCurrentProgressState="true"
+            app:spb_checkStateCompleted="true"
+            app:spb_currentStateDescriptionColor="@color/colorPrimary"
+            app:spb_currentStateNumber="two"
+            app:spb_maxStateNumber="five"
+            app:spb_animationDuration="500"
+            app:spb_maxDescriptionLines="2"
+            app:spb_stateBackgroundColor="#BDBDBD"
+            app:spb_stateDescriptionColor="#808080"
+            app:spb_stateForegroundColor="@color/colorPrimary"
+            app:spb_stateNumberBackgroundColor="#808080"
+            app:spb_stateNumberForegroundColor="#eeeeee"
+            android:visibility="gone"/>
         <TextView
             android:id="@+id/text_view_error_message"
             android:layout_width="match_parent"
@@ -159,7 +180,7 @@
                         android:text="@string/currency"
                         android:textSize="14sp"
                         android:gravity="center"
-                        android:layout_weight="0.2" />
+                        android:layout_weight="0.1" />
 
                     <EditText
                         android:id="@+id/txt_loan_application_amount"
@@ -303,7 +324,7 @@
                             android:text="@string/currency"
                             android:textSize="14sp"
                             android:gravity="center"
-                            android:layout_weight="0.2" />
+                            android:layout_weight="0.1" />
 
                         <TextView
                             android:id="@+id/amount_due_txtview"
