--- a/app/src/main/res/layout/fragment_wallet_loan_farming_details.xml
+++ b/app/src/main/res/layout/fragment_wallet_loan_farming_details.xml
@@ -7,6 +7,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.WalletLoanFarmingDetailsFragment">
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -33,7 +34,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="?actionBarSize"
         android:paddingTop="10dp"
-        android:layout_margin="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:orientation="vertical">
 
         <TextView
@@ -44,7 +47,7 @@
             android:paddingLeft="5dp"
             android:text="Enter Farming Details"
             android:textColor="@color/colorPrimary"
-            android:textSize="@dimen/dimen_20dp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <com.kofigyan.stateprogressbar.StateProgressBar
@@ -64,6 +67,28 @@
             app:spb_stateNumberBackgroundColor="#808080"
             app:spb_stateNumberForegroundColor="#eeeeee"
             app:spb_stateLineThickness="4dp"/>
+        <com.kofigyan.stateprogressbar.StateProgressBar
+            android:id="@+id/loan_application_state_progress_bar_farming_details"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dimen_20dp"
+            android:layout_gravity="center_horizontal"
+            android:textAlignment="center"
+            app:layout_constraintTop_toTopOf="parent"
+            app:spb_animateToCurrentProgressState="true"
+            app:spb_checkStateCompleted="true"
+            app:spb_currentStateDescriptionColor="@color/colorPrimary"
+            app:spb_currentStateNumber="three"
+            app:spb_maxStateNumber="five"
+            app:spb_animationDuration="500"
+            app:spb_maxDescriptionLines="2"
+            app:spb_stateBackgroundColor="#BDBDBD"
+            app:spb_stateDescriptionColor="#808080"
+            app:spb_stateForegroundColor="@color/colorPrimary"
+            app:spb_stateNumberBackgroundColor="#808080"
+            app:spb_stateNumberForegroundColor="#eeeeee"
+            android:visibility="gone"/>
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
