--- a/app/src/main/res/layout/fragment_wallet_loan_preview_request.xml
+++ b/app/src/main/res/layout/fragment_wallet_loan_preview_request.xml
@@ -71,6 +71,27 @@
                 app:spb_stateNumberBackgroundColor="#808080"
                 app:spb_stateNumberForegroundColor="#eeeeee"
                 app:spb_stateLineThickness="4dp" />
+            <com.kofigyan.stateprogressbar.StateProgressBar
+                android:id="@+id/loan_application_state_progress_bar_confirm_details"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dimen_20dp"
+                android:layout_gravity="center_horizontal"
+                android:textAlignment="center"
+                app:layout_constraintTop_toTopOf="parent"
+                app:spb_animateToCurrentProgressState="true"
+                app:spb_checkStateCompleted="true"
+                app:spb_currentStateDescriptionColor="@color/colorPrimary"
+                app:spb_currentStateNumber="four"
+                app:spb_maxStateNumber="five"
+                app:spb_animationDuration="500"
+                app:spb_maxDescriptionLines="2"
+                app:spb_stateBackgroundColor="#BDBDBD"
+                app:spb_stateDescriptionColor="#808080"
+                app:spb_stateForegroundColor="@color/colorPrimary"
+                app:spb_stateNumberBackgroundColor="#808080"
+                app:spb_stateNumberForegroundColor="#eeeeee"
+                android:visibility="gone"/>
 
             <TextView
                 android:id="@+id/text_view_error_message"
